@@ -243,6 +243,9 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
                         <version>${javadoc.plugin.version}</version>
+                        <configuration>
+                            <additionalOptions>--enable-preview</additionalOptions>
+                        </configuration>
                         <executions>
                             <execution>
                                 <id>attach-javadocs</id>
